[CSS Exclusions] Programmatic layout tests fail when subpixel layout is disabled https://bugs.webkit.org/show_bug.cgi?id=115455

Source/WebCore:

First round of changes to restore platform/mac exclusion tests that started failing when
subpixel layout was turned off.

Reviewed by Dirk Schulze.

* rendering/ExclusionPolygon.cpp:
(WebCore::appendArc): Ensure that the 3rd of 5 added vertices is in the center of the arc.
(WebCore::ExclusionPolygon::firstIncludedIntervalLogicalTop): Use ceiledLayoutUnit() for downwards-snapping first fit location.
* rendering/ExclusionRectangle.cpp:
(WebCore::ExclusionRectangle::firstIncludedIntervalLogicalTop): Ditto.

LayoutTests:

Reviewed by Dirk Schulze.

First round of changes to restore platform/mac exclusion tests that started failing when
subpixel layout was turned off. This set of changes just restores four tests. It also revises
the subpixel-utils code to bring it into line with the most recent LayoutUnit et al changes
and to simplify its use a little.

* fast/exclusions/resources/rounded-rectangle.js:
(simulateShape): Revised dependencies on subpixel-utils.
* fast/exclusions/resources/simple-polygon.js:
(polygonXIntercepts): Ditto.
* fast/exclusions/resources/subpixel-utils.js:
(SubPixelLayout.): Substantially revised, see description.
* fast/exclusions/shape-inside/shape-inside-polygon-layout-expected.txt:
* fast/exclusions/shape-inside/shape-inside-polygon-layout.html:
* fast/exclusions/shape-inside/shape-inside-polygon-padding-003-expected.txt:
* fast/exclusions/shape-inside/shape-inside-polygon-padding-003.html:
* fast/exclusions/shape-inside/shape-inside-rounded-rectangle-fit-002-expected.html:
* fast/exclusions/shape-outside-floats/shape-outside-floats-diamond-margin-polygon-expected.txt:
* fast/exclusions/shape-outside-floats/shape-outside-floats-diamond-margin-polygon.html:
* fast/exclusions/shape-outside-floats/shape-outside-floats-ellipse-margin-left-expected.txt:
* fast/exclusions/shape-outside-floats/shape-outside-floats-ellipse-margin-left.html:
* fast/exclusions/shape-outside-floats/shape-outside-floats-ellipse-margin-right-expected.txt:
* fast/exclusions/shape-outside-floats/shape-outside-floats-ellipse-margin-right.html:
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/133936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149457 268f45cc-cd09-0410-ab3c-d52691b4dbfc