Source/WebCore/rendering/ExclusionPolygon.cpp
@@ -118,12 +118,12 @@ static inline void appendArc(Vector<FloatPoint>& vertices, const FloatPoint& arc
     if (endAngle < 0)
         endAngle += twoPI;
     float angle = (startAngle > endAngle) ? (startAngle - endAngle) : (startAngle + twoPI - endAngle);
-    const float arcSegmentCount = 5; // An odd number so that one arc vertex will be eactly arcRadius from arcCenter.
-    float angle5 =  ((padding) ? -angle : twoPI - angle) / arcSegmentCount;
+    const float arcSegmentCount = 6; // An even number so that one arc vertex will be eactly arcRadius from arcCenter.
+    float arcSegmentAngle =  ((padding) ? -angle : twoPI - angle) / arcSegmentCount;
 
     vertices.append(startArcVertex);
     for (unsigned i = 1; i < arcSegmentCount; ++i) {
-        float angle = startAngle + angle5 * i;
+        float angle = startAngle + arcSegmentAngle * i;
         vertices.append(arcCenter + FloatPoint(cos(angle) * arcRadius, sin(angle) * arcRadius));
     }
     vertices.append(endArcVertex);
@@ -505,7 +505,7 @@ bool ExclusionPolygon::firstIncludedIntervalLogicalTop(LayoutUnit minLogicalInte
     }
 
     if (firstFitFound)
-        result = LayoutUnit::fromFloatCeil(firstFitRect.y());
+        result = ceiledLayoutUnit(firstFitRect.y());
     return firstFitFound;
 }
 
